@@ -3,46 +3,88 @@ package com.backend.integrador.service.impl;
 
 import com.backend.integrador.dto.OdontologoDto;
 import com.backend.integrador.entity.Odontologo;
-import com.backend.integrador.repository.IDao;
+import com.backend.integrador.exceptions.ResourceNotFoundException;
+import com.backend.integrador.repository.OdontologoRepository;
 import com.backend.integrador.service.IOdontologoService;
+import com.backend.integrador.utils.JsonPrinter;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
 public class OdontologoService implements IOdontologoService {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(OdontologoService.class);
     private final ObjectMapper objectMapper;
-    private final IDao<Odontologo> odontologoIDao;
+    private final OdontologoRepository odontologoRepository;
 
-    public OdontologoService(IDao<Odontologo> odontologoIDao, ObjectMapper objectMapper) {
-        this.odontologoIDao = odontologoIDao;
+
+    @Autowired
+    public OdontologoService(ObjectMapper objectMapper, OdontologoRepository odontologoRepository) {
         this.objectMapper = objectMapper;
+        this.odontologoRepository = odontologoRepository;
     }
 
-    public OdontologoDto buscarOdontologoPorId(int id) {
-        return objectMapper.convertValue(odontologoIDao.buscarPorId(id), OdontologoDto.class);
+    public OdontologoDto buscarOdontologoPorId(Long id) {
+
+        Odontologo odontologoBuscado = odontologoRepository.findById(id).orElse(null);
+        OdontologoDto odontologoDto = null;
+        if (odontologoBuscado != null) {
+            odontologoDto = objectMapper.convertValue(odontologoBuscado, OdontologoDto.class);
+            LOGGER.info("Odontologo encontrado: {}", JsonPrinter.toString(odontologoDto));
+        } else {
+            LOGGER.info("El id no se encuentra registrado en la base de datos");
+
+
+        }
+        return odontologoDto;
     }
+
 
     public List<OdontologoDto> listarOdontologos() {
-        return odontologoIDao.listarTodos().stream().map(o -> objectMapper.convertValue(o, OdontologoDto.class)).collect(Collectors.toList());
+        List<OdontologoDto> odontologos = odontologoRepository.findAll().stream()
+                .map(o -> objectMapper.convertValue(o, OdontologoDto.class)).toList();
+        ;
+        LOGGER.info("Listado de todos los odontologos: {}", JsonPrinter.toString(odontologos));
+        return odontologos;
     }
 
     @Override
     public OdontologoDto registrarOdontologo(Odontologo odontologo) {
-        return objectMapper.convertValue(odontologoIDao.guardar(odontologo), OdontologoDto.class);
+        Odontologo odGuardado = odontologoRepository.save(odontologo);
+        LOGGER.info("Odontologo guardado: {}", JsonPrinter.toString(odGuardado));
+        return objectMapper.convertValue(odGuardado, OdontologoDto.class);
     }
 
     @Override
     public OdontologoDto actualizarOdontologo(Odontologo odontologo) {
-        return objectMapper.convertValue(odontologoIDao.actualizar(odontologo), OdontologoDto.class);
+        Odontologo odontologoAActualizar = odontologoRepository.findById(odontologo.getId()).orElse(null);
+        OdontologoDto odontologoDtoActualizado = null;
+        if (odontologoAActualizar != null) {
+            odontologoAActualizar = odontologo;
+            odontologoRepository.save(odontologoAActualizar);
+            odontologoDtoActualizado = objectMapper.convertValue(odontologoAActualizar, OdontologoDto.class);
+            LOGGER.warn("Odontologo actualizado: {}", JsonPrinter.toString(odontologoDtoActualizado));
+        } else {
+            LOGGER.error("No fue posible actualizar los datos ya que el odontologo no se encuentra registrado");
+
+        }
+        return odontologoDtoActualizado;
     }
 
-    public void eliminarOdontologo(int id) {
-        odontologoIDao.eliminar(id);
+    @Override
+    public void eliminarOdontologo(Long id) throws ResourceNotFoundException {
+        if (buscarOdontologoPorId(id) != null) {
+            odontologoRepository.deleteById(id);
+            LOGGER.warn("Se ha eliminado el odontologo con id: {}", id);
+        } else {
+            LOGGER.error("No se ha encontrado el odontologo con id " + id);
+            throw new ResourceNotFoundException("No se ha encontrado el odontologo con id " + id);
+        }
     }
-
-
 }
